--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7465a0">  <td>23/08/30 21:23:37</td>   <td>0</td> <td title="&gt;&gt;BaseTest.extentReport()[pri:0, instance:tutorialsNinjaTests.LoginTest@1ed6388a]">&gt;&gt;extentReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408974251</td>   <td></td> </tr>
-<tr bgcolor="7465a0">  <td>23/08/30 21:23:37</td>   <td>686</td> <td title="&lt;&lt;BaseTest.onFinish()[pri:0, instance:tutorialsNinjaTests.LoginTest@1ed6388a]">&lt;&lt;onFinish</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408974251</td>   <td></td> </tr>
-<tr bgcolor="7465a0">  <td>23/08/30 21:23:37</td>   <td>547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowserAndOpenUrl(org.testng.ITestResult,java.lang.String)[pri:0, instance:tutorialsNinjaTests.LoginTest@1ed6388a]">&gt;&gt;launchBrowserAndOpenUrl</td> 
+<tr bgcolor="aa8588">  <td>23/08/30 22:27:57</td>   <td>0</td> <td title="&gt;&gt;BaseTest.extentReport()[pri:0, instance:tutorialsNinjaTests.AddProductToCartTest@7d4f9aae]">&gt;&gt;extentReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1959910454</td>   <td></td> </tr>
+<tr bgcolor="96bacf">  <td>23/08/30 22:27:58</td>   <td>744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductToCartTest.verifyAddToCartFunctionalityFromWishList()[pri:0, instance:tutorialsNinjaTests.AddProductToCartTest@7d4f9aae]">verifyAddToCartFunctionalityFromWishList</td> 
+  <td>main@1959910454</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>23/08/30 22:27:58</td>   <td>903</td> <td title="&lt;&lt;BaseTest.onFinish()[pri:0, instance:tutorialsNinjaTests.AddProductToCartTest@7d4f9aae]">&lt;&lt;onFinish</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1959910454</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>23/08/30 22:27:58</td>   <td>759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:tutorialsNinjaTests.AddProductToCartTest@7d4f9aae]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7465a0">  <td>23/08/30 21:23:37</td>   <td>547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowserAndOpenUrl(org.testng.ITestResult,java.lang.String)[pri:0, instance:tutorialsNinjaTests.LoginTest@1ed6388a]">&gt;&gt;launchBrowserAndOpenUrl</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7465a0">  <td>23/08/30 21:23:37</td>   <td>559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:tutorialsNinjaTests.LoginTest@1ed6388a]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7465a0">  <td>23/08/30 21:23:37</td>   <td>559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:tutorialsNinjaTests.LoginTest@1ed6388a]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b687be">  <td>23/08/30 21:23:37</td>   <td>549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginFunctionality(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tutorialsNinjaTests.LoginTest@1ed6388a]">verifyLoginFunctionality</td> 
-  <td>main@1408974251</td>   <td></td> </tr>
-<tr bgcolor="b687be">  <td>23/08/30 21:23:37</td>   <td>549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginFunctionality(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tutorialsNinjaTests.LoginTest@1ed6388a]">verifyLoginFunctionality</td> 
-  <td>main@1408974251</td>   <td></td> </tr>
 </table>
